# ColdEmails

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  app.py  backup.sh  pyproject.toml  requirements.txt  setup.sh
.claude/commands/: coldemails.md
.streamlit/: config.toml
coldemails/: __init__.py  campaigns.py  cli.py  company.py  config.py  engine.py  enrich.py  firmfinder.py  gmail.py  models.py  personalize.py  sources.py  store.py
coldemails.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
design_handoff_1b_streamlit/: ColdEmails Redesign.dc.html  README.md
docs/: BUILD_PLAN.md  hosting-plan.md
tests/: conftest.py  test_app.py  test_attachments.py  test_campaigns_cli.py  test_engine.py  test_firmfinder.py  test_models_store.py  test_personalize_company.py  test_sources_enrich.py
